src/GLSL/gen/GLSLParser.java
// Generated from D:/antlr4/ShaderParser/src/GLSL\GLSL.g4 by ANTLR 4.5.1
package GLSL.gen;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class GLSLParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.5.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, VERSOIN_PROFILE=20, STRUCT=21, IF=22, ELSE=23, QUESTION=24, 
		FOR=25, DO=26, WHILE=27, CONTINUE=28, BREAK=29, RETURN=30, SWITCH=31, 
		CASE=32, DEFUALT=33, LEFT_PAREN=34, RIGHT_PAREN=35, LEFT_BRACE=36, RIGHT_BRACE=37, 
		LEFT_BRACKET=38, RIGHT_BRACKET=39, DOT=40, COLON=41, SEMICOLON=42, COMMA=43, 
		SHARP=44, DECIMAL=45, OCTAL=46, HEX=47, FLOAT_NUM=48, SCALA=49, VECTOR=50, 
		MATRIX=51, FLOAT_OPAQUE=52, INT_OPAQUE=53, U_INT_OPAQUE=54, BASIC_OPAQUE_TYPE=55, 
		INCREAMENT_OP=56, UNARY_OP=57, MULDIV_OP=58, ADDDIV_OP=59, SHIFT_OP=60, 
		COMPARE_OP=61, EQUAL_OP=62, BITWISE_OP=63, LOGIC_OP=64, ASSIGNMENT_OP=65, 
		ARITHMETIC_ASSIGNMENT_OP=66, IDENTIFIER=67, COMMENT=68, WS=69, LINE_COMMENT=70;
	public static final int
		RULE_prog = 0, RULE_preprocessor = 1, RULE_version_pre = 2, RULE_type_qualifier = 3, 
		RULE_layout_qualifier = 4, RULE_layout_qualifier_id = 5, RULE_storage_qualifier = 6, 
		RULE_precision_qualifier = 7, RULE_interpolation_qualifier = 8, RULE_invariant_qualifier = 9, 
		RULE_precise_qualifier = 10, RULE_integer = 11, RULE_float_num = 12, RULE_bool_num = 13, 
		RULE_type_specifier = 14, RULE_type_specifier_nonarray = 15, RULE_array_specifier = 16, 
		RULE_struct_specifier = 17, RULE_basic_type = 18, RULE_void_type = 19, 
		RULE_scala_type = 20, RULE_vector_type = 21, RULE_matrix_type = 22, RULE_opaque_type = 23, 
		RULE_float_opaque_type = 24, RULE_int_opaque_type = 25, RULE_u_int_opaque_type = 26, 
		RULE_expression = 27, RULE_primary_expression = 28, RULE_constant_expression = 29, 
		RULE_left_value = 30, RULE_array_struct_selection = 31, RULE_assignment_expression = 32, 
		RULE_arithmetic_assignment_expression = 33, RULE_function_definition = 34, 
		RULE_function_declaration = 35, RULE_function_call = 36, RULE_return_Type = 37, 
		RULE_function_name = 38, RULE_func_decl_member = 39, RULE_statement_list = 40, 
		RULE_statement = 41, RULE_simple_statement = 42, RULE_compoud_statement = 43, 
		RULE_basic_statement = 44, RULE_declaration_statement = 45, RULE_simple_declaration = 46, 
		RULE_simple_declarator = 47, RULE_struct_declaration = 48, RULE_function_definition_statement = 49, 
		RULE_assignment_statement = 50, RULE_expression_statement = 51, RULE_selection_statement = 52, 
		RULE_selection_rest_statement = 53, RULE_switch_statement = 54, RULE_case_label = 55, 
		RULE_iteration_statement = 56, RULE_for_init_statement = 57, RULE_for_cond_statement = 58, 
		RULE_for_rest_statement = 59, RULE_jump_statement = 60;
	public static final String[] ruleNames = {
		"prog", "preprocessor", "version_pre", "type_qualifier", "layout_qualifier", 
		"layout_qualifier_id", "storage_qualifier", "precision_qualifier", "interpolation_qualifier", 
		"invariant_qualifier", "precise_qualifier", "integer", "float_num", "bool_num", 
		"type_specifier", "type_specifier_nonarray", "array_specifier", "struct_specifier", 
		"basic_type", "void_type", "scala_type", "vector_type", "matrix_type", 
		"opaque_type", "float_opaque_type", "int_opaque_type", "u_int_opaque_type", 
		"expression", "primary_expression", "constant_expression", "left_value", 
		"array_struct_selection", "assignment_expression", "arithmetic_assignment_expression", 
		"function_definition", "function_declaration", "function_call", "return_Type", 
		"function_name", "func_decl_member", "statement_list", "statement", "simple_statement", 
		"compoud_statement", "basic_statement", "declaration_statement", "simple_declaration", 
		"simple_declarator", "struct_declaration", "function_definition_statement", 
		"assignment_statement", "expression_statement", "selection_statement", 
		"selection_rest_statement", "switch_statement", "case_label", "iteration_statement", 
		"for_init_statement", "for_cond_statement", "for_rest_statement", "jump_statement"
	};

	private static final String[] _LITERAL_NAMES = {
		null, "'version'", "'layout ('", "'shared'", "'const'", "'in'", "'out'", 
		"'uniform'", "'buffer'", "'high_precision'", "'medium_precision'", "'low_precision'", 
		"'smooth'", "'flat'", "'noperspective'", "'invariant'", "'precise'", "'true'", 
		"'false'", "'void'", null, "'struct'", "'if'", "'else'", "'?'", "'for'", 
		"'do'", "'while'", "'continue'", "'break'", "'return'", "'switch'", "'case'", 
		"'defualt'", "'('", "')'", "'{'", "'}'", "'['", "']'", "'.'", "':'", "';'", 
		"','", "'#'", null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, "'='"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, "VERSOIN_PROFILE", "STRUCT", 
		"IF", "ELSE", "QUESTION", "FOR", "DO", "WHILE", "CONTINUE", "BREAK", "RETURN", 
		"SWITCH", "CASE", "DEFUALT", "LEFT_PAREN", "RIGHT_PAREN", "LEFT_BRACE", 
		"RIGHT_BRACE", "LEFT_BRACKET", "RIGHT_BRACKET", "DOT", "COLON", "SEMICOLON", 
		"COMMA", "SHARP", "DECIMAL", "OCTAL", "HEX", "FLOAT_NUM", "SCALA", "VECTOR", 
		"MATRIX", "FLOAT_OPAQUE", "INT_OPAQUE", "U_INT_OPAQUE", "BASIC_OPAQUE_TYPE", 
		"INCREAMENT_OP", "UNARY_OP", "MULDIV_OP", "ADDDIV_OP", "SHIFT_OP", "COMPARE_OP", 
		"EQUAL_OP", "BITWISE_OP", "LOGIC_OP", "ASSIGNMENT_OP", "ARITHMETIC_ASSIGNMENT_OP", 
		"IDENTIFIER", "COMMENT", "WS", "LINE_COMMENT"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "GLSL.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public GLSLParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class ProgContext extends ParserRuleContext {
		public Statement_listContext statement_list() {
			return getRuleContext(Statement_listContext.class,0);
		}
		public List<PreprocessorContext> preprocessor() {
			return getRuleContexts(PreprocessorContext.class);
		}
		public PreprocessorContext preprocessor(int i) {
			return getRuleContext(PreprocessorContext.class,i);
		}
		public ProgContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_prog; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GLSLListener ) ((GLSLListener)listener).enterProg(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GLSLListener ) ((GLSLListener)listener).exitProg(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GLSLVisitor ) return ((GLSLVisitor<? extends T>)visitor).visitProg(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgContext prog() throws RecognitionException {
		ProgContext _localctx = new ProgContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_prog);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(125);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==SHARP) {
				{
				{
				setState(122);
				preprocessor();
				}
				}
				setState(127);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(128);
			statement_list();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PreprocessorContext extends ParserRuleContext {
		public TerminalNode SHARP() { return getToken(GLSLParser.SHARP, 0); }
		public Version_preContext version_pre() {
			return getRuleContext(Version_preContext.class,0);
		}
		public PreprocessorContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_preprocessor; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GLSLListener ) ((GLSLListener)listener).enterPreprocessor(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GLSLListener ) ((GLSLListener)listener).exitPreprocessor(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GLSLVisitor ) return ((GLSLVisitor<? extends T>)visitor).visitPreprocessor(this);
			else return visitor.visitChildren(this);
		}
	}

	public final PreprocessorContext preprocessor() throws RecognitionException {
		PreprocessorContext _localctx = new PreprocessorContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_preprocessor);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(130);
			match(SHARP);
			setState(131);
			version_pre();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Version_preContext extends ParserRuleContext {
		public IntegerContext integer() {
			return getRuleContext(IntegerContext.class,0);
		}
		public TerminalNode VERSOIN_PROFILE() { return getToken(GLSLParser.VERSOIN_PROFILE, 0); }
		public Version_preContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_version_pre; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GLSLListener ) ((GLSLListener)listener).enterVersion_pre(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GLSLListener ) ((GLSLListener)listener).exitVersion_pre(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GLSLVisitor ) return ((GLSLVisitor<? extends T>)visitor).visitVersion_pre(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Version_preContext version_pre() throws RecognitionException {
		Version_preContext _localctx = new Version_preContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_version_pre);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(133);
			match(T__0);
			setState(134);
			integer();
			setState(136);
			_la = _input.LA(1);
			if (_la==VERSOIN_PROFILE) {
				{
				setState(135);
				match(VERSOIN_PROFILE);
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Type_qualifierContext extends ParserRuleContext {
		public List<Storage_qualifierContext> storage_qualifier() {
			return getRuleContexts(Storage_qualifierContext.class);
		}
		public Storage_qualifierContext storage_qualifier(int i) {
			return getRuleContext(Storage_qualifierContext.class,i);
		}
		public List<Layout_qualifierContext> layout_qualifier() {
			return getRuleContexts(Layout_qualifierContext.class);
		}
		public Layout_qualifierContext layout_qualifier(int i) {
			return getRuleContext(Layout_qualifierContext.class,i);
		}
		public List<Precision_qualifierContext> precision_qualifier() {
			return getRuleContexts(Precision_qualifierContext.class);
		}
		public Precision_qualifierContext precision_qualifier(int i) {
			return getRuleContext(Precision_qualifierContext.class,i);
		}
		public List<Interpolation_qualifierContext> interpolation_qualifier() {
			return getRuleContexts(Interpolation_qualifierContext.class);
		}
		public Interpolation_qualifierContext interpolation_qualifier(int i) {
			return getRuleContext(Interpolation_qualifierContext.class,i);
		}
		public List<Invariant_qualifierContext> invariant_qualifier() {
			return getRuleContexts(Invariant_qualifierContext.class);
		}
		public Invariant_qualifierContext invariant_qualifier(int i) {
			return getRuleContext(Invariant_qualifierContext.class,i);
		}
		public List<Precise_qualifierContext> precise_qualifier() {
			return getRuleContexts(Precise_qualifierContext.class);
		}
		public Precise_qualifierContext precise_qualifier(int i) {
			return getRuleContext(Precise_qualifierContext.class,i);
		}
		public Type_qualifierContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_type_qualifier; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GLSLListener ) ((GLSLListener)listener).enterType_qualifier(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GLSLListener ) ((GLSLListener)listener).exitType_qualifier(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GLSLVisitor ) return ((GLSLVisitor<? extends T>)visitor).visitType_qualifier(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Type_qualifierContext type_qualifier() throws RecognitionException {
		Type_qualifierContext _localctx = new Type_qualifierContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_type_qualifier);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(144); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				setState(144);
				switch (_input.LA(1)) {
				case T__2:
				case T__3:
				case T__4:
				case T__5:
				case T__6:
				case T__7:
					{
					setState(138);
					storage_qualifier();
					}
					break;
				case T__1:
					{
					setState(139);
					layout_qualifier();
					}
					break;
				case T__8:
				case T__9:
				case T__10:
					{
					setState(140);
					precision_qualifier();
					}
					break;
				case T__11:
				case T__12:
				case T__13:
					{
					setState(141);
					interpolation_qualifier();
					}
					break;
				case T__14:
					{
					setState(142);
					invariant_qualifier();
					}
					break;
				case T__15:
					{
					setState(143);
					precise_qualifier();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				setState(146); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__1) | (1L << T__2) | (1L << T__3) | (1L << T__4) | (1L << T__5) | (1L << T__6) | (1L << T__7) | (1L << T__8) | (1L << T__9) | (1L << T__10) | (1L << T__11) | (1L << T__12) | (1L << T__13) | (1L << T__14) | (1L << T__15))) != 0) );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Layout_qualifierContext extends ParserRuleContext {
		public List<Layout_qualifier_idContext> layout_qualifier_id() {
			return getRuleContexts(Layout_qualifier_idContext.class);
		}
		public Layout_qualifier_idContext layout_qualifier_id(int i) {
			return getRuleContext(Layout_qualifier_idContext.class,i);
		}
		public TerminalNode RIGHT_PAREN() { return getToken(GLSLParser.RIGHT_PAREN, 0); }
		public List<TerminalNode> COMMA() { return getTokens(GLSLParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(GLSLParser.COMMA, i);
		}
		public Layout_qualifierContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_layout_qualifier; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GLSLListener ) ((GLSLListener)listener).enterLayout_qualifier(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GLSLListener ) ((GLSLListener)listener).exitLayout_qualifier(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GLSLVisitor ) return ((GLSLVisitor<? extends T>)visitor).visitLayout_qualifier(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Layout_qualifierContext layout_qualifier() throws RecognitionException {
		Layout_qualifierContext _localctx = new Layout_qualifierContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_layout_qualifier);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(148);
			match(T__1);
			setState(149);
			layout_qualifier_id();
			setState(154);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==COMMA) {
				{
				{
				setState(150);
				match(COMMA);
				setState(151);
				layout_qualifier_id();
				}
				}
				setState(156);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(157);
			match(RIGHT_PAREN);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Layout_qualifier_idContext extends ParserRuleContext {
		public TerminalNode IDENTIFIER() { return getToken(GLSLParser.IDENTIFIER, 0); }
		public Constant_expressionContext constant_expression() {
			return getRuleContext(Constant_expressionContext.class,0);
		}
		public Layout_qualifier_idContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_layout_qualifier_id; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GLSLListener ) ((GLSLListener)listener).enterLayout_qualifier_id(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GLSLListener ) ((GLSLListener)listener).exitLayout_qualifier_id(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GLSLVisitor ) return ((GLSLVisitor<? extends T>)visitor).visitLayout_qualifier_id(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Layout_qualifier_idContext layout_qualifier_id() throws RecognitionException {
		Layout_qualifier_idContext _localctx = new Layout_qualifier_idContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_layout_qualifier_id);
		try {
			setState(164);
			switch ( getInterpreter().adaptivePredict(_input,5,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(159);
				match(IDENTIFIER);
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(160);
				match(IDENTIFIER);
				setState(161);
				match(ASSIGNMENT_OP);
				setState(162);
				constant_expression();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(163);
				match(T__2);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Storage_qualifierContext extends ParserRuleContext {
		public Storage_qualifierContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_storage_qualifier; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GLSLListener ) ((GLSLListener)listener).enterStorage_qualifier(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GLSLListener ) ((GLSLListener)listener).exitStorage_qualifier(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GLSLVisitor ) return ((GLSLVisitor<? extends T>)visitor).visitStorage_qualifier(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Storage_qualifierContext storage_qualifier() throws RecognitionException {
		Storage_qualifierContext _localctx = new Storage_qualifierContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_storage_qualifier);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(166);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__2) | (1L << T__3) | (1L << T__4) | (1L << T__5) | (1L << T__6) | (1L << T__7))) != 0)) ) {
			_errHandler.recoverInline(this);
			} else {
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
